--- a/public/index.html
+++ b/public/index.html
@@ -278,6 +278,34 @@
             </div>
         </div>
 
+        <footer class="blue-grey lighten-1">
+            <div class="container">
+                <div class="row">
+                    <div class="col s12">
+                        <h5 class="white-text">Informacje</h5>
+                        <p class="grey-text text-lighten-4">Prezentowana informacja jest w trakcie wdrażania i nie posiada jeszcze pełnej bazy wyników pomiarów.
+                        <br>Serwis wykorzystuje dane zebrane od dnia 01.01.2014r.
+                        <br>Dane dotyczące zanieczyszczeń zostały pobrane z serwisu: <a href="http://monitoring.krakow.pios.gov.pl/" style="color: #37474f;">http://monitoring.krakow.pios.gov.pl/</a>
+                        <br>Dane dotyczące pogody uzyskaliśmy dzięki: <a href="http://meteo.ftj.agh.edu.pl/meteo/" style="color: #37474f;">http://meteo.ftj.agh.edu.pl/meteo/</a></p>
+                    </div>
+                    <!--<div class="col l4 offset-l2 s12">-->
+                        <!--<h5 class="white-text">Links</h5>-->
+                        <!--<ul>-->
+                            <!--<li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>-->
+                            <!--<li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>-->
+                            <!--<li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>-->
+                            <!--<li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>-->
+                        <!--</ul>-->
+                    <!--</div>-->
+                </div>
+            </div>
+            <div class="footer-copyright">
+                <div class="container">
+                    <br>
+                </div>
+            </div>
+        </footer>
+
         <!--<script src="weahterScripts.js"></script>-->
         <script src="smogScripts.js"></script>
         <script src="weahterScripts.js"></script>
