Fixed heatmap update on station change.

--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
                     </div>
 
                     <div class="input-field col s2">
-                        <select id="station" onchange="updateSmogData()">
+                        <select id="station" onchange="updateSmogData(); updateHeatMap();">
                             <option value="" disabled>Wybierz stację</option>
                             <option selected value="6">Stacja 6</option>
                             <option value="7">Stacja 7</option>
