Added show/hide prediction charts

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
             /*box-shadow: inset 0 0 3px rgba(51,51,51,0.45);*/
         /*}*/
         .tabs {
+            overflow:hidden;
         @include flexbox();
             height: 38px;
         }
@@ -165,7 +166,7 @@
                 <div class="section">
                     <div class="row">
                         <div class="col s9">
-                            <h5>Smog</h5>
+                            <h5>Prognoza</h5>
                             <canvas id="smogChartPrediction" width="950%" height="350"></canvas>
                         </div>
                         <!-- Switches -->
