Fixed bug with slider

--- a/public/index.html
+++ b/public/index.html
@@ -715,16 +715,21 @@
 //
                 $('ul.tabs li:eq(0)').on('click', 'a', function(e) {
                     document.getElementById('date-time').style.visibility = 'visible';
+                    document.getElementById('date').style.visibility = 'visible';
+                    document.getElementById('dateComp').style.visibility = 'hidden';
                 });
                 $('ul.tabs li:eq(1)').on('click', 'a', function(e) {
                     document.getElementById('date-time').style.visibility = 'visible';
+                    document.getElementById('date').style.visibility = 'visible';
+                    document.getElementById('dateComp').style.visibility = 'hidden';
                 });
                 $('ul.tabs li:eq(2)').on('click', 'a', function(e) {
                     document.getElementById('date-time').style.visibility = 'visible';
+                    document.getElementById('date').style.visibility = 'visible';
+                    document.getElementById('dateComp').style.visibility = 'hidden';
                 });
                 $('ul.tabs li:eq(3)').on('click', 'a', function(e) {
                     document.getElementById('date-time').style.visibility = 'hidden';
-
                     document.getElementById('date').style.visibility = 'hidden';
                     document.getElementById('dateComp').style.visibility = 'visible';
 
